fixing file access